<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".SimulationIp">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity_connect_to_lamps">

        <EditText
            android:id="@+id/connect_IP_textField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/IPAdres"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/connect_poortNummer_TextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/PortNumber"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/connect_IP_textField"
            app:layout_constraintTop_toBottomOf="@+id/connect_IP_textField" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fragmentInfoText"
            android:textAlignment="viewStart"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/connect_poortNummer_TextField"
            app:layout_constraintTop_toBottomOf="@+id/connect_poortNummer_TextField" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>