<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/GreyBackGround"
    android:layout_height="match_parent"
    tools:context=".AllHueLamps">

    <Button
        android:id="@+id/allLamps_lampStatusColor"
        android:layout_width="64dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allLamps_lampStatusOnOff_TextView" />

    <Button
        android:id="@+id/allLamp_back_button"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/LightGreyButtons"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/allLamps_seekBar_brightness"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allLamps_brightness_Textview" />

    <SeekBar
        android:id="@+id/allLamps_seekBar_saturation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allLamps_saturation_Textview" />

    <SeekBar
        android:id="@+id/allLamps_seekBar_hueLampColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allLamps_hueLampColor_Textview" />

    <TextView
        android:id="@+id/allLamps_brightness_Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/brightness"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allLamps_lampStatus_switch" />

    <TextView
        android:id="@+id/allLamps_saturation_Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Saturation"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/allLamps_brightness_Textview"
        app:layout_constraintTop_toBottomOf="@+id/allLamps_seekBar_brightness" />

    <TextView
        android:id="@+id/allLamps_hueLampColor_Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Lamp_Color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/allLamps_saturation_Textview"
        app:layout_constraintTop_toBottomOf="@+id/allLamps_seekBar_saturation" />

    <Button
        android:id="@+id/allLamps_ChangeLamp_Button"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/LightGreyButtons"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/allLamps_currentColor_Image"
        app:layout_constraintTop_toTopOf="@+id/allLamps_currentColor_Image" />

    <TextView
        android:id="@+id/allLamps_saturationValue_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/allLamps_saturation_Textview"
        app:layout_constraintEnd_toEndOf="@+id/allLamps_seekBar_saturation"
        app:layout_constraintTop_toTopOf="@+id/allLamps_saturation_Textview" />

    <TextView
        android:id="@+id/allLamps_hueColorValue_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/allLamps_hueLampColor_Textview"
        app:layout_constraintEnd_toEndOf="@+id/allLamps_seekBar_hueLampColor"
        app:layout_constraintTop_toTopOf="@+id/allLamps_hueLampColor_Textview" />

    <TextView
        android:id="@+id/allLamps_brightnessValue_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/allLamps_brightness_Textview"
        app:layout_constraintEnd_toEndOf="@+id/allLamps_seekBar_brightness"
        app:layout_constraintTop_toTopOf="@+id/allLamps_brightness_Textview" />

    <ImageView
        android:id="@+id/allLamps_currentColor_Image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allLamps_seekBar_hueLampColor"
        app:srcCompat="@android:drawable/presence_invisible" />

    <TextView
        android:id="@+id/allLamps_lampStatus_Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:text="@string/Lamps_Status"
        android:textColor="@android:color/black"
        android:textColorLink="@color/LightGreyButtons"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/allLamps_lampStatusOnOff_TextView"
        app:layout_constraintTop_toTopOf="@+id/allLamps_lampStatusOnOff_TextView" />

    <TextView
        android:id="@+id/allLamps_lampStatusOnOff_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="On"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/allLamps_lampStatusColor"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/allLamps_lampStatus_switch"
        android:layout_width="45dp"
        android:layout_height="18dp"
        android:layout_marginEnd="32dp"
        android:textColorLink="@color/LightGreyButtons"
        app:layout_constraintEnd_toEndOf="@+id/allLamps_lampStatus_Textview"
        app:layout_constraintTop_toBottomOf="@+id/allLamps_lampStatus_Textview" />

</android.support.constraint.ConstraintLayout>